app/assets/stylesheets/users/leaderboard.scss
.leaderboard__card {
  border-radius: 0;
  margin-bottom: 15px;
  cursor: pointer;
}

.leaderboard__card-header {
  color: white;
  font-size: 22px;
  padding: 0;
  background-color: #015386;
  border: 0;
  border-radius: 0;
  height: 50px;
}

.leaderboard__card-header:first-child {
  border: 0;
  border-radius: 0;
}

.leaderboard__card-body {
  padding: 0;
}

.leaderboard__table {
  margin-top: 10px;
  margin-bottom: 0;
}

.leaderboard-table__header {
  background-color: #0074B1;
  color: white;
}

.red-text {
  color: red;
}

.green-text {
  color: green;
}

.leaderboard__flag {
  height: 20px;
  white-space: nowrap;
}

.table td.fit, .table th.fit {
  white-space: nowrap;
  width: 1%;
}

.leaderboard__rank-change {
  line-height: 1;
}

.leaderboard__rank-icon {
  font-size: x-large;
  color: #0F9D58;
}

.leaderboard__rank-icon--green {
  color: #0F9D58;
}

.leaderboard__rank-icon--red {
  color: #d9534f;
}

.leaderboard__rank-icon--grey {
  font-size: xx-small !important;
  color: #999999;
}

.leaderboard__rank-delta {
  font-size: 12px;
  color: darkgray;
  line-height: 1;
}

